# SIEVE_simulator

./: CMakeLists.txt  README.md  parameters
src/: cellcoal.c  cellcoal.h  definitions.h  eigen.c  eigen.h  extraDefinitions.h  finiteMuInDelSimulator.h  hashMap.c  hashMap.h  statisticalTools.cpp  statisticalTools.h
test/: testFunctions.c  testFunctions.h  testGetBinaryKeyMDI.c  testGetMuDelInsNr.h  testGetMuDelInsNr_1.c  testGetMuDelInsNr_2.c  testGetMuDelInsNr_3.c  testGetMuDelInsNr_4.c  testGetValIntArrToIntMDI.c  testNumOverlapMDI.c
